--- a/src/main/resources/templates/ExpiredToken.html
+++ b/src/main/resources/templates/ExpiredToken.html
@@ -7,6 +7,9 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+<script>
+    setTimeout(function(){window.location='https://localhost:3000/';}, 5000)
+</script>
 <style>
     .text {
         font-family: "Montserrat", sans-serif!important;
@@ -95,12 +98,13 @@
                                     href="http://localhost:3000/"
                             >
                                Go Sign In
+
                         </a>
                         </div>
                     </div>
         </div>
     </div>
-    
+
 
 </body>
 </html>
