--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -7,7 +7,13 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
+<script>
+
+    setTimeout(function(){window.location='https://localhost:3000/';}, 5000)
+
+</script>
 <style>
+
     .text {
         font-family: "Montserrat", sans-serif!important;
         font-size: 20px!important;
@@ -100,7 +106,7 @@
                     </div>
         </div>
     </div>
-    
+
 
 </body>
 </html>
