--- a/src/main/resources/templates/linkInvalid.html
+++ b/src/main/resources/templates/linkInvalid.html
@@ -6,7 +6,11 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
+<script>
+    setTimeout(function(){window.location='https://localhost:3000/';}, 5000)
+</script>
 <style>
     .text {
         font-family: "Montserrat", sans-serif!important;
@@ -100,7 +104,7 @@
                     </div>
         </div>
     </div>
-    
+
 
 </body>
 </html>
