Added  auto redirect resend to confirm side.

--- a/src/main/resources/templates/ExpiredToken.html
+++ b/src/main/resources/templates/ExpiredToken.html
@@ -8,7 +8,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <script>
-    setTimeout(function(){window.location='https://localhost:3000/';}, 5000)
+    setTimeout(function(){window.location='https://localhost:3000/resend-activation';}, 5000)
 </script>
 <style>
     .text {
@@ -95,9 +95,9 @@
                                     id="submit"
                                     class="btn btn-info pr-4 pl-4 mt-2 text-light "
                                     variant="contained"
-                                    href="http://localhost:3000/"
+                                    href='https://localhost:3000/resend-activation'
                             >
-                               Go Sign In
+                               Resend confirm
 
                         </a>
                         </div>
