--- a/src/main/resources/templates/linkInvalid.html
+++ b/src/main/resources/templates/linkInvalid.html
@@ -6,10 +6,12 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 </head>
 <script>
-    setTimeout(function(){window.location='https://localhost:3000/';}, 5000)
+    setTimeout(function(){window.location='https://localhost:3000/resend-activation';}, 5000)
+
 </script>
 <style>
     .text {
@@ -89,6 +91,7 @@
                         Error: The link is invalid or broken!
                     </h1>
                 </div>
+
     
                         <div class="center">
                             <a
@@ -96,7 +99,7 @@
                                     id="submit"
                                     class="btn btn-info pr-4 pl-4 mt-2 text-light "
                                     variant="contained"
-                                    href="http://localhost:3000/"
+                                    href='https://localhost:3000/resend-activation'
                             >
                                Go Sign In
                         </a>
