Reformat code by intellij default

--- a/src/main/resources/templates/ExpiredToken.html
+++ b/src/main/resources/templates/ExpiredToken.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <script>
-    setTimeout(function(){window.location='https://localhost:3000/resend-activation';}, 5000)
+    setTimeout(function () {
+        window.location = 'https://localhost:3000/resend-activation';
+    }, 5000)
 </script>
 <style>
     .text {
-        font-family: "Montserrat", sans-serif!important;
-        font-size: 20px!important;
-        align-items: center!important;
-        text-align: center!important;
-        color: #0B5C2B!important;
+        font-family: "Montserrat", sans-serif !important;
+        font-size: 20px !important;
+        align-items: center !important;
+        text-align: center !important;
+        color: #0B5C2B !important;
 
     }
 
 
-
-
-    .center{
+    .center {
 
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    .btn-color{
+
+    .btn-color {
         color: #454141 !important;
         background-color: #c4daee !important;
         border: 0;
         /* -webkit-box-shadow: none;*/
 
 
-        font-weight: bold!important;
+        font-weight: bold !important;
 
     }
 
@@ -49,61 +50,63 @@
         border: 2px solid #ffffff;
         border-radius: 25px;
     }
-    body{
-         background-color: rgba(146, 160, 157, 0.04);
+
+    body {
+        background-color: rgba(146, 160, 157, 0.04);
         background-repeat: no-repeat;
         background-size: cover;
         margin: 20px;
 
 
     }
-    .logo img{
+
+    .logo img {
         height: 80px;
         width: 80px;
     }
-    .background .center >img{
+
+    .background .center > img {
         position: relative;
         float: left;
-        width:  80px;
+        width: 80px;
         height: 80px;
         background-position: 50% 50%;
-        background-repeat:   no-repeat;
-        background-size:     cover;
+        background-repeat: no-repeat;
+        background-size: cover;
     }
-
 
 
 </style>
 <body>
-   
-    <div class="  vh-100 m-5 background container d-flex align-items-center" >
-        <div class="row  center mt-5">
-            <div class="col-md-6 box mt-5   ">
-                <div class="center ">
-                    <h2>Bookora</h2>
-                </div>
-    
-                <div class="mt-2">
-                    <h1 class="text  mb-2 justify-content-center">
-                    The token is expired
-                    </h1>
-                </div>
-    
-                        <div class="center">
-                            <a
-                                    type="submit"
-                                    id="submit"
-                                    class="btn btn-info pr-4 pl-4 mt-2 text-light "
-                                    variant="contained"
-                                    href='https://localhost:3000/resend-activation'
-                            >
-                               Resend confirm
 
-                        </a>
-                        </div>
-                    </div>
+<div class="  vh-100 m-5 background container d-flex align-items-center">
+    <div class="row  center mt-5">
+        <div class="col-md-6 box mt-5   ">
+            <div class="center ">
+                <h2>Bookora</h2>
+            </div>
+
+            <div class="mt-2">
+                <h1 class="text  mb-2 justify-content-center">
+                    The token is expired
+                </h1>
+            </div>
+
+            <div class="center">
+                <a
+                        type="submit"
+                        id="submit"
+                        class="btn btn-info pr-4 pl-4 mt-2 text-light "
+                        variant="contained"
+                        href='https://localhost:3000/resend-activation'
+                >
+                    Resend confirm
+
+                </a>
+            </div>
         </div>
     </div>
+</div>
 
 
 </body>
