Change from https tp http (We will find out how to run REACT in HTTPS)

--- a/src/main/resources/templates/confirm.html
+++ b/src/main/resources/templates/confirm.html
@@ -10,7 +10,7 @@
 <script>
 
     setTimeout(function () {
-        window.location = 'https://localhost:3000/';
+        window.location = 'http://localhost:3000/';
     }, 5000)
 
 </script>
