--- a/src/main/resources/templates/linkInvalid.html
+++ b/src/main/resources/templates/linkInvalid.html
@@ -11,7 +11,7 @@
 </head>
 <script>
     setTimeout(function () {
-        window.location = 'https://localhost:3000/resend-activation';
+        window.location = 'http://localhost:3000/resend-activation';
     }, 5000)
 
 </script>
