--- a/src/main/resources/templates/ExpiredToken.html
+++ b/src/main/resources/templates/ExpiredToken.html
@@ -9,7 +9,7 @@
 </head>
 <script>
     setTimeout(function () {
-        window.location = 'https://localhost:3000/resend-activation';
+        window.location = 'http://localhost:3000/resend-activation';
     }, 5000)
 </script>
 <style>
